--- a/backend/backend-ui/src/main/resources/static/css/styles.css
+++ b/backend/backend-ui/src/main/resources/static/css/styles.css
@@ -5,8 +5,40 @@
 body {
     display: flex;
     height: 100vh;
+    width: 100%;
 }
 
 main {
+    width: 100%;
     padding: 0 15px;
+    margin-left: 280px;
+}
+
+.item-image {
+    cursor: pointer;
+}
+
+tr.item {
+    cursor: pointer;
+
+}
+
+main form {
+    max-width: 300px;
+    margin: 0 auto;
+    width: 500px;
+}
+
+form .form-control:nth-of-type(2 + n) {
+    margin-top: 1em;
+}
+
+.item-dropdown {
+    position: relative !important;
+}
+
+.item-dropdown ul.dropdown-menu {
+    position: absolute !important;
+    left: 0;
+    top: 30px !important;
 }
