--- a/backend/backend-ui/src/main/resources/templates/layout.html
+++ b/backend/backend-ui/src/main/resources/templates/layout.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
   </head>
   <body>
-    <nav class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark h-100" style="width: 280px;">
+    <nav class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark h-100" style="width: 280px;position: fixed;left: 0;top: 0;bottom: 0;">
         <a th:href="@{/panel}" th:method="get" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
             <span class="fs-5">Панель адміністратора</span>
         </a>
@@ -67,10 +67,10 @@
         <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="true">
                 <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                <strong>mdo</strong>
+                <strong sec:authentication="name"></strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" style="position: absolute; inset: auto auto 0px 0px; margin: 0px; transform: translate3d(0px, -34px, 0px);" data-popper-placement="top-start">
-                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item" th:href="@{/panel/users/profile}">Profile</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" th:href="@{/logout}">Sign out</a></li>
             </ul>
@@ -78,6 +78,8 @@
   </nav>
     <main layout:fragment="body"></main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/static/js/scripts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="/js/scripts.js"></script>
+
   </body>
 </html>
