--- a/backend/backend-ui/src/main/resources/templates/pages/images.html
+++ b/backend/backend-ui/src/main/resources/templates/pages/images.html
@@ -5,14 +5,75 @@
 <head>
     <meta charset="UTF-8">
     <title>Зображення</title>
-<!--    <div th:replace="fragments/styles"></div>-->
-<!--    <link rel="stylesheet" type="text/css" href="/css/style.css">-->
 </head>
 <body layout:fragment="body">
-<!--<div th:replace="fragments/sidebar::sidebar"></div>-->
-    <main>
-        <h1>Зображення</h1>
+    <main class="w-100">
+        <div class="d-flex justify-content-between">
+            <h1>Зображення</h1>
+            <a th:href="@{/panel/images/create}"
+               class="btn btn-primary"
+               type="button"
+               id="btn-create"
+               style="height: max-content;align-self: center;">Додати зображення</a>
+        </div>
+        <form method="get" th:action="@{/panel/images}" th:object="${filter}">
+            <select name="group" th:field="*{group}">
+                <option value="*">Всі</option>
+                <option value="">Салон</option>
+                <option value="emp">Працівники</option>
+            </select>
+            <select name="username" th:field="*{username}">
+                <option value="">Всі</option>
+                <option th:each="e : ${employees}"
+                        th:value="${e.user.username}"
+                        th:text="${e.user.username}"></option>
+            </select>
+            <button type="submit" class="btn btn-primary">Пошук</button>
+        </form>
+
+        <div class="items-container w-100 mt-2 d-flex flex-column gap-2" style="min-height: 100vh">
+            <table class="table">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Шлях</th>
+                    <th scope="col">Ім'я файлу</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr class="item item-image item-service item-dropdown"
+                    th:each="image : ${images}"
+                    th:data-src="${image.url}"
+                    style="position: relative">
+                    <td th:text="${image.path}"></td>
+                    <td th:text="${image.name}"></td>
+                    <td>
+                    <ul class="dropdown-menu d-none position-absolute top-0 left-0 gap-1 p-2 rounded-3 mx-0 border-0 shadow w-220px show" data-bs-theme="dark">
+                        <li><a class="dropdown-item rounded-2 btn-edit" >Редагувати</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item rounded-2 btn-delete" th:href="@{/panel/images/delete(filename=${image.getFullName()})}">Видалити</a></li>
+                    </ul>
+                    <td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header pb-1">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close-btn"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body d-flex justify-content-center">
+                        <img id="modalImage" src="" alt="Image" style="width: 500px">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-<!--    <div th:replace="fragments/scripts"></div>-->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            useImageModal();
+        });
+    </script>
 </body>
 </html>
