--- a/backend/backend-ui/src/main/resources/templates/index.html
+++ b/backend/backend-ui/src/main/resources/templates/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <main layout:fragment="body">
-        <h1>Головна</h1>
+        <div class="d-f w-100 justify-content-center">
+            <h1>Ласкаво просимо до панелі адміністратора</h1>
+        </div>
     </main>
 </body>
 </html>
