--- a/backend/backend-ui/src/main/resources/static/css/styles.css
+++ b/backend/backend-ui/src/main/resources/static/css/styles.css
@@ -25,7 +25,7 @@ tr.item {
 
 main form {
     max-width: 300px;
-    margin: 0 auto;
+    margin: 20px auto 0;
     width: 500px;
 }
 
@@ -41,4 +41,9 @@ form .form-control:nth-of-type(2 + n) {
     position: absolute !important;
     left: 0;
     top: 30px !important;
+}
+
+.form-group {
+    display: flex;
+    flex-flow: column nowrap;
 }
