--- a/backend/backend-ui/src/main/resources/templates/pages/images.html
+++ b/backend/backend-ui/src/main/resources/templates/pages/images.html
@@ -16,19 +16,28 @@
                id="btn-create"
                style="height: max-content;align-self: center;">Додати зображення</a>
         </div>
-        <form method="get" th:action="@{/panel/images}" th:object="${filter}">
-            <select name="group" th:field="*{group}">
-                <option value="*">Всі</option>
-                <option value="">Салон</option>
-                <option value="emp">Працівники</option>
-            </select>
-            <select name="username" th:field="*{username}">
-                <option value="">Всі</option>
-                <option th:each="e : ${employees}"
-                        th:value="${e.user.username}"
-                        th:text="${e.user.username}"></option>
-            </select>
-            <button type="submit" class="btn btn-primary">Пошук</button>
+        <form class="search-form" method="get" th:action="@{/panel/images}" th:object="${filter}">
+            <div class="form-group">
+                <div class="form-group">
+                    <input class="form-control rounded-3" type="text" name="search" id="searchInput" placeholder="Пошук"/>
+                </div>
+                <div class="form-btns">
+                    <button type="submit" class="btn btn-primary">Пошук</button>
+                </div>
+            </div>
+            <div class="form-group">
+                <select name="group" th:field="*{group}">
+                    <option value="*">Всі</option>
+                    <option value="">Салон</option>
+                    <option value="emp">Працівники</option>
+                </select>
+                <select name="username" th:field="*{username}">
+                    <option value="">Всі</option>
+                    <option th:each="e : ${employees}"
+                            th:value="${e.user.username}"
+                            th:text="${e.user.username}"></option>
+                </select>
+            </div>
         </form>
 
         <div class="items-container w-100 mt-2 d-flex flex-column gap-2" style="min-height: 100vh">
