--- a/frontend/src/app/components/frame-light/frame-light.component.css
+++ b/frontend/src/app/components/frame-light/frame-light.component.css
@@ -20,6 +20,11 @@
   color: black;
 }
 
+.frame-light.dark {
+  background-color: var(--sidebar-color);
+  color: white;
+}
+
 .hr-hug {
   width: max-content;
 }
