--- a/frontend/src/app/components/frame-light/frame-light.component.html
+++ b/frontend/src/app/components/frame-light/frame-light.component.html
@@ -5,7 +5,8 @@
   'hr-fill': hr === 'fill',
   'vr-hug': vr === 'hug',
   'vr-fill': vr === 'fill',
-}">
+  'dark': theme === 'dark'
+}" >
   <ng-content></ng-content>
 </div>
 
