--- a/frontend/src/app/pages/home-page/home-page.component.html
+++ b/frontend/src/app/pages/home-page/home-page.component.html
@@ -6,13 +6,7 @@
 
 
 <div class="section"  id="section-2">
-  <p class="welcome-text animated-title">Ми пропонуємо вам не просто послуги краси,
-    але й унікальний досвід, який змінить ваше уявлення про красу. Наша команда
-    професіоналів з високим рівнем майстерності та пристрастю до своєї роботи готова
-    втілити в життя ваші найсміливіші бажання. Ми використовуємо тільки найкращі
-    продукти та передові технології, щоб забезпечити вам бездоганний результат.
-    Ми прагнемо створити атмосферу розслаблення та комфорту, де кожен клієнт
-    може відчути себе особливим.</p>
+  <p class="welcome-text animated-title">Ласкаво просимо до нашого салону краси — місця, де гармонія душі та тіла стає реальністю. Ми створили цей простір з любов'ю та турботою, щоб ви могли відчути себе особливими та неповторними.</p>
 </div>
 
 <div class="section" id="section-3">
