--- a/frontend/src/app/components/feedbacks/create-feedback-dialog/create-feedback-dialog.component.html
+++ b/frontend/src/app/components/feedbacks/create-feedback-dialog/create-feedback-dialog.component.html
@@ -22,19 +22,21 @@
       >
       </textarea>
     </div>
-    <div class="dialog-part">
-      <app-button
-        theme="light"
-        value="Надіслати"
-        (click)="onSubmit()"
-      />
-    </div>
-    <div class="dialog-part">
-      <app-button
-        theme="dark"
-        value="Закрити"
-        (click)="onClose()"
-      />
+    <div style="display: flex;gap: 10px; width: 100%;justify-content:center">
+      <div class="dialog-part">
+        <app-button
+          theme="light"
+          value="Надіслати"
+          (click)="onSubmit()"
+        />
+      </div>
+      <div class="dialog-part">
+        <app-button
+          theme="dark"
+          value="Закрити"
+          (click)="onClose()"
+        />
+      </div>
     </div>
   </div>
 </frame-light>
