--- a/frontend/src/app/pages/gallery-page/gallery-page.component.css
+++ b/frontend/src/app/pages/gallery-page/gallery-page.component.css
@@ -5,9 +5,17 @@
     padding: 0;
 }
 
+.section-gallery, main {
+  overflow: hidden;
+}
+
 .image-box {
     width: 25vh;
     height: 25vh;
+}
+
+.frame-light {
+  overflow: auto;
 }
 
 .images-list {
@@ -20,9 +28,10 @@
 
 .images {
     display: flex;
-    flex-direction: column;
+    flex-flow: row wrap;
     gap: 10px;
     margin: 0 10px 0 0;
+    height: max-content;
 }
 
 .image {
@@ -33,17 +42,23 @@
 .image-container {
     width: 100%;
     height: 100%;
-    display: flex;
+    /*display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
 }
 
 .image-container>.image-box {
     width: 100vh;
-    height: 89vh;
+    border-radius: 10px;
+    height: 97vh;
 }
 
 .image-container .image {
-    width: 100vh;
-    height: 89vh;
+    width: 100%;
+    height: 100%;
+}
+
+img {
+  object-fit: cover;
+  border-radius: 10px
 }
