--- a/frontend/src/app/pages/gallery-page/gallery-page.component.html
+++ b/frontend/src/app/pages/gallery-page/gallery-page.component.html
@@ -1,14 +1,16 @@
-<div class="section" id="section-1">
-  <div class="images-list">
-    <div class="images">
-      <div class="image-box" (click)="handleImageClick(img)" *ngFor="let img of images">
-        <img class="image" [src]="img.url"/>
-      </div>
-    </div>
-  </div>
-  <div class="image-container">
+<div class="section section-gallery" id="section-1">
+  <div *ngIf="visibleImageBox" class="image-container">
     <div class="image-box">
       <img class="image" [src]="selectedImage"/>
     </div>
   </div>
+  <frame-light vr="fill" hr="fill" theme="dark">
+    <div class="images-list">
+      <div class="images">
+        <div class="image-box" (click)="handleImageClick(img)" *ngFor="let img of images">
+          <img class="image" [src]="img.url"/>
+        </div>
+      </div>
+    </div>
+  </frame-light>
 </div>
