--- a/frontend/src/app/pages/gallery-page/gallery-page.component.css
+++ b/frontend/src/app/pages/gallery-page/gallery-page.component.css
@@ -1,8 +1,17 @@
 #section-1 {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 10px;
-    padding: 0;
+        display: grid;
+        gap: 10px;
+        padding: 0;
+        grid-auto-flow: column;
+        grid-template-columns: auto 1fr;
+}
+
+.grid {
+   display: grid;
+}
+
+.flex {
+  display: flex !important;
 }
 
 .section-gallery, main {
@@ -16,6 +25,7 @@
 
 .frame-light {
   overflow: auto;
+  width: 100%;
 }
 
 .images-list {
@@ -23,6 +33,7 @@
     height: 100%;
     overflow-y: scroll;
     display: flex;
+    flex-flow: row wrap;
     gap: 10px;
 }
 
@@ -40,7 +51,7 @@
 }
 
 .image-container {
-    width: 100%;
+   width: auto;
     height: 100%;
     /*display: flex;
     justify-content: center;
